<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#fcffd6"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineLeft"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineRight"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/menuList"
        android:id="@+id/background_image">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:importantForAccessibility="no"
            android:src="@drawable/cart_shop" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="150dp"
        android:layout_width="0dp"
        app:layout_constraintRight_toRightOf="@+id/lineRight"
        app:layout_constraintLeft_toLeftOf="@+id/lineLeft"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:id="@+id/header_card" >

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/infoBar"
            android:layout_height="120dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="true" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_name"
                android:textSize="30sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="75dp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/reviewWidget"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                android:id="@+id/deliveryTimeWidget"
                >


                <androidx.cardview.widget.CardView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="#80FFFFFF"
                    >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shop_delivery_title"
                            android:textColor="#000000"
                            app:layout_constraintBottom_toTopOf="@+id/deliveryPrice"
                            app:layout_constraintLeft_toLeftOf="@+id/deliveryPrice" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shop_delivery_value"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            android:id="@+id/deliveryPrice"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:cardCornerRadius="30dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/shop_delivery_hint" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="75dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/deliveryTimeWidget"
                app:layout_constraintRight_toLeftOf="@+id/infoWidget"
                android:id="@+id/reviewWidget"
                >

                <androidx.cardview.widget.CardView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="#80FFFFFF"
                    >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shop_review_title"
                            android:textColor="#000000"
                            app:layout_constraintBottom_toTopOf="@+id/reviewValueWidget"
                            app:layout_constraintLeft_toLeftOf="@+id/reviewValueWidget" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shop_review_value"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            android:id="@+id/reviewValueWidget"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:cardCornerRadius="30dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/shop_review_hint" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="75dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/reviewWidget"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/infoWidget"
                >

                <androidx.cardview.widget.CardView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="#80FFFFFF"
                    >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shop_map_title"
                            android:textColor="#000000"
                            app:layout_constraintBottom_toTopOf="@+id/infoValueWidget"
                            app:layout_constraintLeft_toLeftOf="@+id/infoValueWidget" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shop_map_value"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            android:id="@+id/infoValueWidget"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:cardCornerRadius="30dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/shop_map_hint" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/background_image"
        app:layout_constraintBottom_toTopOf="@+id/bottomLine"
        app:layout_constraintLeft_toLeftOf="@+id/lineLeft"
        app:layout_constraintRight_toRightOf="@+id/lineRight"
        app:layout_constraintVertical_weight="10"
        android:id="@+id/menuList"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/menuList"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view"
            android:id="@+id/textInputContainer"
            android:baselineAligned="true"
            >
            <EditText
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/searchButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:inputType="text"
                android:id="@+id/textInput"
                android:labelFor="@+id/textInput"
                android:autofillHints=""
                />
            <Button
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_button"

                app:layout_constraintLeft_toRightOf="@+id/textInput"
                app:layout_constraintRight_toRightOf="parent"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="LinearLayoutManager" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/bottomLine"
        app:layout_constraintTop_toBottomOf="@+id/menuList"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#fff"
        android:padding="10dp"
        >
        <EditText
            android:gravity="center"
            android:inputType="phone"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/phoneInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintRight_toLeftOf="@+id/phoneButton"
            android:autofillHints="phone"
            />
        <Button
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/tel_button"
            android:textSize="15sp"
            app:layout_constraintLeft_toRightOf="@+id/phoneInput"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/phoneButton"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>